# perception-localization-mapping-projects

./: README.md
first_project/: CMakeLists.txt  package.xml
first_project/launch/: odom_launch.launch
first_project/src/: odom_node.cpp
second_project/: CMakeLists.txt  package.xml  waypoints.csv
second_project/cfg/: costmap_common_params.yaml  st_config.yaml  teb_local_planner_params.yaml
second_project/launch/: mapping.launch  navigation.launch  testing.launch
second_project/map_raw/: map1_multiplane.pgm  map1_multiplane.yaml  map2_multiplane.pgm  map2_multiplane.yaml  map2_singleplane.yaml
second_project/rviz/: mapping.rviz  navigation.rviz
second_project/src/: navigation(withClasses).cpp  navigation.cpp  tf_publisher.cpp
second_project/stage/: mapping.world  nav_map.pgm  nav_map.yaml  navigation.world  turtlebot.inc
